Utilisation d'une DAO pour l'accès à MongoDB (préparation de CQRS) Réduction de l'utilisation de Rx à l'organisation des traitements entre les services